chore: create godocs swagger for browseproduct
